udagram-frontend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: udagram-frontend
  name: udagram-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: udagram-frontend
