udagram-frontend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: udagram-udacity.frontend.local
    http:
      paths:
      - path: /
        backend:
          serviceName: udagram-frontend
          servicePort: 80
